Fix footer gap: replace margin-top with padding-top so spacing uses footer bg color

--- a/CSS/Forside.css
+++ b/CSS/Forside.css
@@ -420,9 +420,12 @@ p{
     font-size: 2vw;
   }
 
+  footer {
+    padding-top: 8%;
+  }
+
   .footerSection {
     background-color: #222222;
-    margin-top: 8%;
   }
 }
 
@@ -563,10 +566,13 @@ p{
     font-size: 3.5vw;
   }
 
+  footer {
+    padding-top: 40%;
+  }
+
   .footerSection {
     display: flex;
     justify-content: center;
-    margin-top: 40%;
     background-color: #222222;
   }
 
