--- a/CSS/Om.css
+++ b/CSS/Om.css
@@ -315,9 +315,12 @@ p{
         font-size: 2vw;
     }
 
+    footer {
+        padding-top: 8%;
+    }
+
     .footerSection {
         background-color: #222222;
-        margin-top: 8%;
     }
 }
 
@@ -412,10 +415,13 @@ p{
         font-size: medium;
     }
 
+    footer {
+        padding-top: 40%;
+    }
+
     .footerSection {
         display: flex;
         justify-content: center;
-        margin-top: 40%;
         background-color: #222222;
     }
     footer h3 {
