--- a/CSS/Prisliste.css
+++ b/CSS/Prisliste.css
@@ -254,9 +254,12 @@ p{
         font-size: 2vw;
     }
 
+    footer {
+        padding-top: 8%;
+    }
+
     .footerSection {
         background-color: #222222;
-        margin-top: 8%;
     }
 }
 
@@ -318,10 +321,13 @@ p{
         border-radius: 8px;
     }
 
+    footer {
+        padding-top: 40%;
+    }
+
     .footerSection {
         display: flex;
         justify-content: center;
-        margin-top: 40%;
         background-color: #222222;
     }
     footer h3 {
